add investment functionality