@@ -3,10 +3,13 @@ package com.budgetbuddy.domain.investment;
 import com.budgetbuddy.domain.investment.dto.InvestmentDashboardResponse;
 import com.budgetbuddy.domain.investment.dto.InvestmentRequest;
 import com.budgetbuddy.domain.investment.dto.InvestmentResponse;
+import com.budgetbuddy.domain.market.dto.QuoteResponse;
+import com.budgetbuddy.domain.market.service.MarketService;
 import com.budgetbuddy.domain.user.User;
 import com.budgetbuddy.domain.user.UserService;
 import com.budgetbuddy.shared.exception.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -14,28 +17,28 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class InvestmentService {
 
     private final InvestmentRepository investmentRepository;
     private final UserService userService;
-    // Will be added later: private final YahooFinanceService yahooFinanceService;
+    private final MarketService marketService;
 
     @Transactional(readOnly = true)
     public List<InvestmentResponse> getInvestments(String email) {
         User user = userService.getUserByEmail(email);
-        List<Investment> investments = investmentRepository.findByUserId(user.getId());
-        
-        return investments.stream().map(this::mapToResponseWithMarketData).collect(Collectors.toList());
+        return investmentRepository.findByUserId(user.getId()).stream()
+                .map(this::mapToResponseWithMarketData)
+                .toList();
     }
 
     @Transactional
     public InvestmentResponse addInvestment(String email, InvestmentRequest request) {
         User user = userService.getUserByEmail(email);
-        
+
         Investment investment = Investment.builder()
                 .user(user)
                 .ticker(request.getTicker().toUpperCase())
@@ -45,7 +48,7 @@ public class InvestmentService {
                 .avgPrice(request.getAvgPrice())
                 .purchaseDate(request.getPurchaseDate())
                 .build();
-                
+
         investment = investmentRepository.save(investment);
         return mapToResponseWithMarketData(investment);
     }
@@ -55,14 +58,14 @@ public class InvestmentService {
         User user = userService.getUserByEmail(email);
         Investment investment = investmentRepository.findByIdAndUserId(id, user.getId())
                 .orElseThrow(() -> new EntityNotFoundException("Investment", id.toString()));
-                
+
         investment.setTicker(request.getTicker().toUpperCase());
         investment.setName(request.getName());
         investment.setType(request.getType());
         investment.setQuantity(request.getQuantity());
         investment.setAvgPrice(request.getAvgPrice());
         investment.setPurchaseDate(request.getPurchaseDate());
-        
+
         investment = investmentRepository.save(investment);
         return mapToResponseWithMarketData(investment);
     }
@@ -79,27 +82,26 @@ public class InvestmentService {
     public InvestmentDashboardResponse getDashboard(String email) {
         User user = userService.getUserByEmail(email);
         List<Investment> investments = investmentRepository.findByUserId(user.getId());
-        
+
         BigDecimal totalInvested = BigDecimal.ZERO;
         BigDecimal currentTotalValue = BigDecimal.ZERO;
-        
+
         for (Investment inv : investments) {
             BigDecimal investedAmount = inv.getQuantity().multiply(inv.getAvgPrice());
             totalInvested = totalInvested.add(investedAmount);
-            
-            // Mocking current price for now, to be replaced by Yahoo Finance API integration
-            BigDecimal mockCurrentPrice = inv.getAvgPrice().multiply(new BigDecimal("1.05")); // Mock 5% return
-            BigDecimal currentValue = inv.getQuantity().multiply(mockCurrentPrice);
-            currentTotalValue = currentTotalValue.add(currentValue);
+
+            BigDecimal currentPrice = getCurrentPrice(inv.getTicker(), inv.getAvgPrice());
+            currentTotalValue = currentTotalValue.add(inv.getQuantity().multiply(currentPrice));
         }
-        
+
         BigDecimal netProfitLoss = currentTotalValue.subtract(totalInvested);
         BigDecimal returnPercent = BigDecimal.ZERO;
-        
+
         if (totalInvested.compareTo(BigDecimal.ZERO) > 0) {
-            returnPercent = netProfitLoss.divide(totalInvested, 4, RoundingMode.HALF_UP).multiply(new BigDecimal("100"));
+            returnPercent = netProfitLoss.divide(totalInvested, 4, RoundingMode.HALF_UP)
+                    .multiply(BigDecimal.valueOf(100));
         }
-        
+
         return InvestmentDashboardResponse.builder()
                 .totalInvested(totalInvested)
                 .currentTotalValue(currentTotalValue)
@@ -108,19 +110,20 @@ public class InvestmentService {
                 .build();
     }
 
+    // ─── Private helpers ────────────────────────────────────────────────
+
     private InvestmentResponse mapToResponseWithMarketData(Investment investment) {
-        // Mocking market data for Phase 5 initial setup
-        BigDecimal mockCurrentPrice = investment.getAvgPrice().multiply(new BigDecimal("1.05"));
-        BigDecimal currentValue = investment.getQuantity().multiply(mockCurrentPrice);
-        
+        BigDecimal currentPrice = getCurrentPrice(investment.getTicker(), investment.getAvgPrice());
+        BigDecimal currentValue = investment.getQuantity().multiply(currentPrice);
         BigDecimal totalCost = investment.getQuantity().multiply(investment.getAvgPrice());
+
+        BigDecimal profit = currentValue.subtract(totalCost);
         BigDecimal returnPercent = BigDecimal.ZERO;
         if (totalCost.compareTo(BigDecimal.ZERO) > 0) {
-            returnPercent = currentValue.subtract(totalCost)
-                    .divide(totalCost, 4, RoundingMode.HALF_UP)
-                    .multiply(new BigDecimal("100"));
+            returnPercent = profit.divide(totalCost, 4, RoundingMode.HALF_UP)
+                    .multiply(BigDecimal.valueOf(100));
         }
-        
+
         return InvestmentResponse.builder()
                 .id(investment.getId())
                 .ticker(investment.getTicker())
@@ -129,9 +132,19 @@ public class InvestmentService {
                 .quantity(investment.getQuantity())
                 .avgPrice(investment.getAvgPrice())
                 .purchaseDate(investment.getPurchaseDate())
-                .currentPrice(mockCurrentPrice)
+                .currentPrice(currentPrice)
                 .currentValue(currentValue)
                 .returnPercent(returnPercent)
                 .build();
+    }
+
+    private BigDecimal getCurrentPrice(String ticker, BigDecimal fallback) {
+        try {
+            QuoteResponse quote = marketService.getQuote(ticker);
+            return quote.getPrice();
+        } catch (Exception e) {
+            log.warn("Market data unavailable for {}, using avgPrice as fallback", ticker);
+            return fallback;
+        }
     }
 }
